[package]
name = "quill-delta-rs"
version = "1.1.0"
edition = "2021"
license = "MIT"
description = "Implementation of Quill editor Delta format in Rust"
homepage = "https://github.com/amantoux/quill-delta-rs"
repository = "https://github.com/amantoux/quill-delta-rs"
readme = "README.md"

[dependencies]
serde_json = "1.0"
serde_derive = "1.0"
serde = "1.0"
